Update RegistryController.java